--- a/index.html
+++ b/index.html
@@ -3,46 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <title>Responsive Bootstrap Page</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg p-1">
-        <div class="container fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav w-100 justify-content-between">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html">LOREM IPSUM</a>
-              </li>
-              <li class=" nav-item">
-                <a class="nav-link" href="#">Dolor</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sit</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Amet</a>
-              </li>
-              <li class="nav-item">
-                <div class="input-group">
-                      <input type="search" id="form1" class="form-control" placeholder="search">
-                      <label class="form-label" for="form1"></label>
+    <div class="container-fluid">
+        <!-- Barra de Navegación -->
+        <nav class="navbar navbar-expand-lg navbar-dark ">
+            <a class="navbar-brand" href="index.html">LOREM IPSUM</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Dolor</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Sit</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Amet</a></li>
+                    
+                    <!-- Menú desplegable para opciones en pantallas pequeñas/medianas -->
+                    <li class="nav-item dropdown d-lg-none">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Opciones
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Opción 1</a>
+                            <a class="dropdown-item" href="#">Opción 2</a>
+                            <a class="dropdown-item" href="#">Opción 3</a>
+                            <a class="dropdown-item" href="#">Opción 4</a>
+                        </div>
+                    </li>
+
+                    <!-- Barra de búsqueda -->
+                    <li class="nav-item">
+                        <input class="form-control ml-lg-3" id="searchInput" type="text" placeholder="Buscar...">
+                        <ul id="searchResults" class="search-result"></ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Acordeón visible en pantallas grandes -->
+        <div class="row mt-3">
+            <div class="col-lg-3 d-none d-lg-block mb-3">
+                <div class="accordion" id="accordionDesktop">
+                    <div class="card">
+                        <div class="card-header" id="headingDesktopOne">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseDesktopOne" aria-expanded="true" aria-controls="collapseDesktopOne">
+                                    Opción 1
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseDesktopOne" class="collapse show" aria-labelledby="headingDesktopOne" data-parent="#accordionDesktop">
+                            <div class="card-body">
+                                Contenido de Opción 1.
+                            </div>
+                        </div>
                     </div>
-              </li>
-            </ul>
-          </div>
+                    <div class="card">
+                        <div class="card-header" id="headingDesktopTwo">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseDesktopTwo" aria-expanded="false" aria-controls="collapseDesktopTwo">
+                                    Opción 2
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseDesktopTwo" class="collapse" aria-labelledby="headingDesktopTwo" data-parent="#accordionDesktop">
+                            <div class="card-body">
+                                Contenido de Opción 2.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header" id="headingDesktopThree">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseDesktopThree" aria-expanded="false" aria-controls="collapseDesktopThree">
+                                    Opción 3
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseDesktopThree" class="collapse" aria-labelledby="headingDesktopThree" data-parent="#accordionDesktop">
+                            <div class="card-body">
+                                Contenido de Opción 3.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header" id="headingDesktopFour">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseDesktopFour" aria-expanded="false" aria-controls="collapseDesktopFour">
+                                    Opción 4
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseDesktopFour" class="collapse" aria-labelledby="headingDesktopFour" data-parent="#accordionDesktop">
+                            <div class="card-body">
+                                Contenido de Opción 4.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Columna con texto y carrusel -->
+            <div class="col-lg-9">
+                <h2>Lorem ipsum...</h2>
+                <div class="carousel-border">
+                    <p id="carouselText" class="carousel-text">...vestibulum mollis, tortor ac congue commodo</p>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-md-4">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p>Pellentesque id nunc libero. Fusce vitae enim et tellus lacinia...</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p>Orci varius natoque penatibus et magnis dis parturient...</p>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-4">
+                        <p>Mauris mattis porttitor erat, in pharetra risus fringilla lobortis...</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p>In mi velit, fringilla sed velit vel, ornare varius dui...</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p>Proin suscipit orci mi, ut hendrerit mi molestie nec...</p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </nav>
-      <h2 class="text-center"> Lorem Impsum...</h2>
-    </header>
-    
+    </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/script.js"></script>
 </html>
+
+
